<resources>
    <string name="app_name">Author Genie</string>
    <string name="action_settings">Settings</string>
    <string name="submit">Add Goal</string>
    <string name="hint_new_goal">enter a number</string>
    <string name="add_a_goal">add a goal</string>
    <string name="goal_label_placeholder">goal label placeholder</string>
    <string name="date_placeholder">date placeholder</string>
    <string name="goal_numbers_placeholder">00/00</string>
    <string name="OK">OK</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="update">Update</string>
    <string name="link_to_website_text"><a href="http://www.authorgenie.net">Stuck? Get an AuthorGenie boost</a></string>
    <string name="about">About</string>
    <string name="about_section">
        About Author Genie:
        \n For more information about Author Genie, visit <a href="http://www.authorgenie.net">authorgenie.net</a>
        \n
        \n About the app:
        \n Author Genie v1.1
        \n This application was coded in Java by Ryan Schafer.
        \n It is open source and can be used, modified and distributed freely as described under MIT

    </string>
    <string name="author_genie_lamp_logo">Author Genie Lamp Logo</string>
    <string name="authorgenie_lamp_icon">AuthorGenie lamp icon</string>
    <string name="magic_lamp_icon">magic lamp icon</string>
    <string name="enter_a_word_or_minute_goal">Set a word or minute goal for the day, week, or month.</string>
    <string name="recurring">Recurring</string>
    <string name="one_time">One time</string>
    <string name="progress_hint">0</string>
    <string name="pyramid">Pyramid</string>
    <string name="main_instructions">Enter the number of words or minutes you\'ve written today.
        \n(swipe to hide)
    </string>
    <array name="inspire_text">
        <item>Close your eyes. Take a breath. Remember why you love this project.</item>
        <item>Hey, you’re here. You showed up. You get points for that.</item>
        <item>Inner critic getting loud? You are not alone! Mine is named Fred. Yours?</item>
        <item>Keep your eyes on your own writing journey. Comparisons are dangerous.</item>
        <item>Write words? You are a <i>writer</i>. <i>Not</i> a wannabe. <i>Not</i> an impostor.
        </item>
        <item>Stuck? Try a smaller goal. Small successes keep you coming back.</item>
        <item>Your weird, frustrating process is your process. Own it. Make peace with it.</item>
        <item>Nobody else could write this like <i>you</i>.
        </item>
        <item>What do you love about this project? Focus on that.</item>
        <item>Hey, sometimes you just have to take a nap.</item>
        <item>Close your eyes. Breathe. Summon up that magic feeling of flow.</item>
        <item>Have you stopped to breathe today? Time for three deep breaths.</item>
        <item>Clear the cobwebs with a five-minute free write.</item>
        <item>What happens next? Take a walk and carry the question with you.</item>
        <item>First drafts are supposed to suck. You can fix it later.</item>
        <item>Where does your muse live? In the shower? In your car? Pay a visit.</item>
        <item>Say it with me: "I am a writer. I’ve got this."</item>
    </array>
    <string name="title_activity_scrolling_edit_text">Write</string>

    <string name="your_words_here">Your words here…</string>
    <string name="empty_wordcount">00</string>
    <string name="add_word_count_button_description">Save your work and update your progress with
        the current word count</string>
    <string name="default_write_filename">Unitled</string>
    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="Write">Write</string>
    <string name="statistics">Statistics</string>
    <string name="untitled">untitled</string>
    <string name="word_count">word count</string>
    <string name="document_title">document title</string>
    <string name="recycler_view_label">Your current goals:</string>
    <string name="new_label">New</string>
    <string name="total">Total</string>
    <string name="goals">Goals</string>
    <string name="projects">Projects</string>
    <string name="entry_mode">Entry Mode:</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="enter_a_name_for_your_project">Enter a name for your project</string>
    <string name="target_wordcount_hint">target wordcount</string>
    <string name="submit_project">Add Project</string>
    <string name="create_a_project_instructions">Create a project to keep track of your work</string>
    <string name="new_goal">New Goal</string>
    <string name="new_project">New Project</string>
    <string name="new_">New</string>
    <string name="toast_no_decrease">Your total can only be increased, not diminished!</string>
</resources>