<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/goals" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/projects" />

        </com.google.android.material.tabs.TabLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/big_margin"
            android:layout_marginVertical="@dimen/hugeMargin"
            android:fontFamily="sans-serif-light"
            android:text="@string/enter_a_word_or_minute_goal"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/edit_goal_amount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabLayout"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/edit_goal_amount"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="@dimen/big_margin"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="18sp"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_new_goal"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/goal_type_spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <Spinner
            android:id="@+id/goal_type_spinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toTopOf="@+id/goal_duration_spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <Spinner
            android:id="@+id/goal_duration_spinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toTopOf="@+id/freqSwitch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:checked="true"
            android:text="@string/recurring"
            android:textSize="18sp"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/white"
            android:layout_margin="@dimen/big_margin"
            android:id="@+id/freqSwitch"
            app:layout_constraintBottom_toTopOf="@+id/button_submit_goal"
            app:layout_constraintStart_toStartOf="parent"
            />

        <Button
            android:id="@+id/button_submit_goal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_padding"
            android:background="@color/design_default_color_primary"
            android:text="@string/submit"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.693" />


</androidx.constraintlayout.widget.ConstraintLayout>

