<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/big_margin"
        android:layout_marginVertical="@dimen/hugeMargin"
        android:fontFamily="sans-serif-light"
        android:text="@string/create_a_project_instructions"
        android:textColor="@color/white"
        android:textSize="18sp"

        app:layout_constraintBottom_toTopOf="@+id/name_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/name_edittext"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="@dimen/big_margin"
        android:backgroundTint="@color/teal_700"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        android:fontFamily="sans-serif-light"
        android:hint="@string/enter_a_name_for_your_project"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/target_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/target_edittext"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="@dimen/big_margin"
        android:backgroundTint="@color/teal_700"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        android:fontFamily="sans-serif-light"
        android:hint="@string/target_wordcount_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/date_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/date_edittext"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="@dimen/big_margin"
        android:backgroundTint="@color/teal_700"
        android:fontFamily="sans-serif-light"
        android:hint="@string/date_placeholder"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_submit_project"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/button_submit_project"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:background="@color/design_default_color_primary"
        android:text="@string/submit_project"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.894" />




</androidx.constraintlayout.widget.ConstraintLayout>

