<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainFragmentConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/pyramid"
        android:src="@drawable/triangle_background"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="0.0" />

    <com.ryanschafer.authorgenie.ui.main.TextViewCarousel
        android:id="@+id/header"
        style="@style/tipsAndQuotesText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="16dp"
        android:maxWidth="325dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5" />


    <TextView
        android:id="@+id/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_margin"
        android:background="@color/purple_dark"
        android:padding="@dimen/smallPadding"
        android:text="@string/main_instructions"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/editTextWrapper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0" />

    <RelativeLayout
        android:id="@+id/editTextWrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/progress_input_background"
        app:layout_constraintBottom_toTopOf="@id/addProgressButton"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7">

        <EditText
            android:id="@+id/enterProgressEditText"
            android:layout_width="115dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:hint="@string/progress_hint"
            android:importantForAutofill="no"
            android:inputType="number"
            android:paddingHorizontal="@dimen/smallPadding"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColorHint="@color/black"

            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/entryTypeSpinnerWrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/progress_input_background"
        app:layout_constraintBottom_toBottomOf="@+id/editTextWrapper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@+id/guideline2">

        <Spinner
            android:id="@+id/entryTypeSpinner"
            android:layout_width="115dp"
            android:layout_height="50dp"
            android:paddingHorizontal="@dimen/smallPadding"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/projectSpinnerWrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/progress_input_background"
        app:layout_constraintBottom_toTopOf="@+id/addProgressButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/entryTypeSpinnerWrapper">

        <Spinner
            android:id="@+id/projectSpinner"
            android:layout_width="115dp"
            android:layout_height="50dp"
            android:paddingHorizontal="@dimen/smallPadding"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </RelativeLayout>

    <Button
        android:id="@+id/addProgressButton"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="@dimen/big_margin"
        android:text="@string/update"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="309dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/darker_blue"
        android:clipToPadding="false"
        android:contentDescription="@string/recycler_view_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton2"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/authorGenieButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:minHeight="48dp"
        android:text="@string/link_to_website_text"
        android:textAlignment="center"
        android:textColor="@color/purple_light"
        app:layout_constraintBottom_toBottomOf="@id/recyclerview"
        app:layout_constraintEnd_toEndOf="@+id/recyclerview"
        app:layout_constraintStart_toStartOf="@id/recyclerview"
        app:layout_constraintTop_toTopOf="@+id/recyclerview" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/newGoalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/add_a_goal"
        android:focusable="true"
        android:padding="@dimen/big_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_outline_add_24" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/teal_200"
        android:text="@string/goals"
        android:textOff="@string/goals"
        android:textOn="@string/goals"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <ToggleButton
        android:id="@+id/toggleButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:background="@color/teal_700"
        android:text="@string/projects"
        android:textOff="@string/projects"
        android:textOn="@string/projects"
        app:layout_constraintStart_toEndOf="@+id/toggleButton"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <Spinner
        android:id="@+id/recViewSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/recyclerview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/toggleButton2" />

    <RadioGroup
        android:id="@+id/switch1"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/addProgressButton"
        app:layout_constraintStart_toStartOf="@+id/editTextWrapper"
        app:layout_constraintTop_toBottomOf="@+id/editTextWrapper">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:checked="true"
            android:id="@+id/radio_new"
            android:text="@string/new_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:checked="false"
            android:id="@+id/radio_total"
            android:text="@string/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>