<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="100dp"
    android:layout_margin="@dimen/small_margin">

    <TextView
        android:id="@+id/progressNumbersRecyclerview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goal_numbers_placeholder"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/progBarRecyclerview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/progBarRecyclerview"
        app:layout_constraintTop_toTopOf="@+id/progBarRecyclerview"
        app:layout_constraintVertical_bias="1.0" />

    <ProgressBar
        android:id="@+id/progBarRecyclerview"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="128dp"
        android:layout_height="30dp"
        android:paddingVertical="@dimen/smallPadding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/goalLabelRecyclerview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:layout_marginTop="@dimen/big_margin"
        android:paddingVertical="@dimen/big_padding"
        android:text="@string/goal_label_placeholder"
        app:layout_constraintBottom_toTopOf="@+id/progBarRecyclerview"
        app:layout_constraintStart_toStartOf="@+id/progBarRecyclerview"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/goalDateRecyclerview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/smallPadding"
        android:text="@string/date_placeholder"
        app:layout_constraintEnd_toEndOf="@+id/progBarRecyclerview"
        app:layout_constraintTop_toBottomOf="@+id/progBarRecyclerview" />
</androidx.constraintlayout.widget.ConstraintLayout>