<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/darker_blue"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:fitsSystemWindows="true"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/author_genie_lamp_logo"
                android:src="@drawable/lamp_icon_60" />

            <TextView
                android:id="@+id/custom_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="Sans Serif"
                android:text="@string/app_name"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>

        <com.ryanschafer.authorgenie.ui.main.TextViewCarousel
            android:id="@+id/header"
            style="@style/tipsAndQuotesText"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="8dp"
            android:maxWidth="325dp"
            android:padding="@dimen/big_padding"
            android:text="@string/inspirational_reminder_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/main_fragment_container"
            android:layout_width="399dp"
            android:layout_height="594dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.529"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header"
            app:layout_constraintVertical_bias="1.0"
            tools:context=".MainActivity" />

        <TextView
            android:id="@+id/footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:paddingBottom="16dp"
            android:text="@string/link_to_website_text"
            android:textColor="@color/purple_200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addGoalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_margin"
            android:clickable="true"
            android:contentDescription="@string/add_a_goal"
            android:focusable="true"
            android:src="@drawable/ic_outline_add_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>